# galerie-cheloudiakoff-labomaton

./: .gitignore  README.md  docker-compose.yml  plan.md
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql  002_seed_demo.sql  003_editions.sql  004_media_folder.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs
backend/src/handlers/: admin.rs  auth.rs  mod.rs  public.rs
backend/src/models/: artist.rs  artwork.rs  contact.rs  edition.rs  event.rs  media.rs  mod.rs  page.rs  post.rs  user.rs  waitlist.rs
backend/src/routes/: mod.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/public/: robots.txt
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/admin/: ArtistPicker.tsx  MarkdownEditor.tsx  MediaPicker.tsx
frontend/src/components/layout/: AdminLayout.tsx  Footer.tsx  Header.tsx  PublicLayout.tsx
frontend/src/components/ui/: button.tsx  dialog.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: utils.ts
frontend/src/pages/admin/: Artists.tsx  Artworks.tsx  Dashboard.tsx  Editions.tsx  Events.tsx  Login.tsx  Media.tsx  Messages.tsx  Pages.tsx  Posts.tsx  Waitlist.tsx
frontend/src/pages/public/: ArtistDetail.tsx  Artists.tsx  Contact.tsx  Editions.tsx  EventDetail.tsx  Events.tsx  Gallery.tsx  Home.tsx  Labomaton.tsx  News.tsx  NewsDetail.tsx
frontend/src/types/: index.ts
